// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Modal.Close should match snapshot with alignment set 1`] = `
.c1 {
  position: relative;
  border-radius: 1000px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin transparent;
  background-color: transparent;
  color: #0074A6;
  font-size: 1rem;
  height: 3rem;
  min-width: 3rem;
  padding: 0;
}

.c1:hover,
.c1:focus,
.c1:active {
  background: rgba(128,128,128,0.16);
  color: #0074A6;
}

.c1:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(1000px + 2px);
  box-shadow: 0 0 0 2px rgba(128,128,128,0.4);
}

.c2 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
  color: currentColor;
}

.c0 {
  position: absolute;
  height: 3rem;
  width: 3rem;
  margin: 0.5rem;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

<div
  className="c0 anchor-modal-close"
>
  <button
    className="c1 anchor-button"
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <span
      className="c2 anchor-icon close anchor-button-prefix"
      scale="lg"
    >
      <svg
        height={24}
        viewBox="0 0 16 16"
        width={24}
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0h16v16H0z"
          />
          <g
            fill="currentColor"
            fillRule="nonzero"
          >
            <path
              d="M4.398 4.37l6.852 6.85-.495.495-6.852-6.85c-.292-.292-.354-.75-.073-1.032.283-.284.742-.222 1.035.07l6.85 6.851c.293.292.355.75.111.987l-.04.048c-.28.281-.74.218-1.031-.074l.495-.495c.033.034.055.044.036.078-.02.013-.027-.01-.065-.049L4.371 4.4c-.044-.043-.068-.047-.044-.072.025-.024.029 0 .071.043z"
            />
            <path
              d="M11.468 4.617l.248.248-6.851 6.85c-.292.293-.75.355-1.012.092l-.023-.021c-.281-.281-.218-.74.073-1.032l6.85-6.85c.292-.293.752-.355 1.013-.092l.023.021c.281.281.218.74-.073 1.031l-.248-.247z"
            />
          </g>
        </g>
      </svg>
    </span>
  </button>
</div>
`;

exports[`Component: Modal.Close should render 1`] = `
.c1 {
  position: relative;
  border-radius: 1000px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin transparent;
  background-color: transparent;
  color: #0074A6;
  font-size: 1rem;
  height: 3rem;
  min-width: 3rem;
  padding: 0;
}

.c1:hover,
.c1:focus,
.c1:active {
  background: rgba(128,128,128,0.16);
  color: #0074A6;
}

.c1:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(1000px + 2px);
  box-shadow: 0 0 0 2px rgba(128,128,128,0.4);
}

.c2 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
  color: currentColor;
}

.c0 {
  position: absolute;
  height: 3rem;
  width: 3rem;
  margin: 0.5rem;
  top: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

<div
  className="c0 anchor-modal-close"
>
  <button
    className="c1 anchor-button"
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <span
      className="c2 anchor-icon close anchor-button-prefix"
      scale="lg"
    >
      <svg
        height={24}
        viewBox="0 0 16 16"
        width={24}
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0h16v16H0z"
          />
          <g
            fill="currentColor"
            fillRule="nonzero"
          >
            <path
              d="M4.398 4.37l6.852 6.85-.495.495-6.852-6.85c-.292-.292-.354-.75-.073-1.032.283-.284.742-.222 1.035.07l6.85 6.851c.293.292.355.75.111.987l-.04.048c-.28.281-.74.218-1.031-.074l.495-.495c.033.034.055.044.036.078-.02.013-.027-.01-.065-.049L4.371 4.4c-.044-.043-.068-.047-.044-.072.025-.024.029 0 .071.043z"
            />
            <path
              d="M11.468 4.617l.248.248-6.851 6.85c-.292.293-.75.355-1.012.092l-.023-.021c-.281-.281-.218-.74.073-1.032l6.85-6.85c.292-.293.752-.355 1.013-.092l.023.021c.281.281.218.74-.073 1.031l-.248-.247z"
            />
          </g>
        </g>
      </svg>
    </span>
  </button>
</div>
`;
